# candlestick-patterns

./: pyproject.toml
