[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candlestick_patterns"
version = "0.0.1"
description = "Candlestick patterns detector"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/saurabh-shirke/candlestick-patterns"